tests/nad_test_11/resources.yaml
# resource : https://github.com/openshift/multus-networkpolicy/blob/278ec20e795c3a590500e789716be7fcc4d7107b/e2e/tests/stacked.yml
# confirming results : 
# https://github.com/openshift/multus-networkpolicy/blob/278ec20e795c3a590500e789716be7fcc4d7107b/e2e/tests/stacked.bats
---
---
apiVersion: "k8s.cni.cncf.io/v1"
kind: NetworkAttachmentDefinition
metadata:
  namespace: default
  name: macvlan1-stacked
spec: 
  config: '{
            "cniVersion": "0.3.1",
            "name": "macvlan1-stacked",
            "plugins": [
                {
                    "type": "macvlan",
                    "mode": "bridge",
                    "ipam":{
                      "type":"host-local",
                      "subnet":"2.2.5.0/24",
                      "rangeStart":"2.2.5.8",
                      "rangeEnd":"2.2.5.67"
                    }
                }]
        }'
---
apiVersion: v1
kind: Namespace
metadata:
    name: test-stacked
---
# Pods
apiVersion: v1
kind: Pod
metadata:
  name: pod-server
  namespace: test-stacked
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-stacked
  labels:
    app: test-stacked
    name: pod-server
spec:
  containers:
  - name: macvlan-worker1
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:e2e-test
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-client-a
  namespace: test-stacked
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-stacked
  labels:
    app: test-stacked
    name: pod-client-a
spec:
  containers:
  - name: macvlan-worker1
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:e2e-test
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-client-b
  namespace: test-stacked
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-stacked
  labels:
    app: test-stacked
    name: pod-client-b
spec:
  containers:
  - name: macvlan-worker1
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:e2e-test
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-client-c
  namespace: test-stacked
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-stacked
  labels:
    app: test-stacked
    name: pod-client-c
spec:
  containers:
  - name: macvlan-worker1
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:e2e-test
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
---
# MultiNetworkPolicies
# this policy accepts ingress trafic from pod-client-a to pod-server
# next policy accepts ingress trafic from pod-client-b to pod-server
# as a result, these policies accepts ingress traffic from pod-client-a
# or from pod-client-b, to pod-server.
apiVersion: k8s.cni.cncf.io/v1beta1
kind: MultiNetworkPolicy
metadata:
  name: testnetwork-policy-stacked-1
  namespace: test-stacked
  annotations:
    k8s.v1.cni.cncf.io/policy-for: default/macvlan1-stacked
spec:
  podSelector:
    matchLabels:
      name: pod-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: pod-client-a
---
apiVersion: k8s.cni.cncf.io/v1beta1
kind: MultiNetworkPolicy
metadata:
  name: testnetwork-policy-stacked-2
  namespace: test-stacked
  annotations:
    k8s.v1.cni.cncf.io/policy-for: default/macvlan1-stacked
spec:
  podSelector:
    matchLabels:
      name: pod-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: pod-client-b
